--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,10 @@ plugins {
 
 group = 'org.example'
 version = '1.0-SNAPSHOT'
+sourceCompatibility = 11
+
+compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = "UTF-8"
 
 repositories {
     mavenCentral()
@@ -12,12 +16,7 @@ repositories {
 dependencies {
 
     testImplementation 'com.codeborne:selenide:5.23.3'
-    testImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
-    testImplementation 'org.testng:testng:7.3.0'
-    testImplementation 'io.github.bonigarcia:webdrivermanager:4.4.3'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    implementation 'com.google.guava:guava:30.1.1-jre'
-
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
 }
 
 test {
