--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,11 @@ repositories {
 }
 
 dependencies {
-
     testImplementation 'com.codeborne:selenide:5.23.3'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
+    implementation 'org.slf4j:slf4j-simple:2.1.0-alpha1'
+    implementation 'org.projectlombok:lombok:1.18.30'
+    testImplementation 'org.projectlombok:lombok:1.18.30'
 }
 
 test {
